--- a/YYKJ/android/wasteoilcustom/src/main/res/values/strings.xml
+++ b/YYKJ/android/wasteoilcustom/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="product">危废生产单</string>
     <string name="schedule">调度配送</string>
     <string name="recReport">危废转运联单</string>
+    <string name="user_logout_account">退出当前账号</string>
 </resources>
